Update to 4.4